<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ingredients"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:text="@string/ingredients" />

    <Button
        android:id="@+id/canMake"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/canMake" />

    <Button
        android:id="@+id/browse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse" />

    <Button
        android:id="@+id/random"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/random" />

    <Button
        android:id="@+id/randomCanMake"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/randomCanMake" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_logo_descr"
        android:src="@drawable/edge" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next Page" />

</LinearLayout>